change content to list naming, because avoiding style overlap

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -4,6 +4,13 @@
   border-radius: var(--space-3);
   box-shadow: 0px 2px 10px 0 var(--clr-shadow);
 
+  &__social-media {
+    width: 68.06%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--space-4);
+  }
+
   &_sm {
     width: 68.66%;
     display: flex;
@@ -15,7 +22,7 @@
   }
 
   &_md {
-    width: min(77.61%, 25rem);
+    width: min(77.61%, 24rem);
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -26,7 +33,6 @@
     }
 
     @include above-1104px {
-      max-width: 16.25rem;
       width: min(20vw, 16.25rem);
     }
   }
