--- a/src/sass/layout/_utilities.scss
+++ b/src/sass/layout/_utilities.scss
@@ -22,3 +22,7 @@
   //   padding-#{$val}: calc(var(--space) * 6.25);
   // }
 }
+
+.pt_60to100 {
+  padding-block-start: clamp(3.75rem, 11.7vw, 6.25rem);
+}
