--- a/style.css
+++ b/style.css
@@ -767,6 +767,10 @@ a:where(:active, :visited, :link) {
   padding-block: var(--space-12);
 }
 
+.pt_60to100 {
+  padding-block-start: clamp(3.75rem, 11.7vw, 6.25rem);
+}
+
 .container {
   width: min(100% - var(--space-10), 68rem);
   margin-inline: auto;
@@ -879,13 +883,7 @@ a:where(:active, :visited, :link) {
   }
 }
 
-.content {
-  padding-block-start: clamp(3.75rem, 11.7vw, 6.25rem);
-}
-.content__title {
-  margin-block-end: var(--space-4);
-}
-.content__list {
+.list {
   margin-block-start: clamp(var(--space-8), 6vw, var(--space-12));
   display: flex;
   flex-direction: column;
@@ -893,22 +891,21 @@ a:where(:active, :visited, :link) {
   align-items: center;
 }
 @media (min-width: 50rem) {
-  .content__list {
+  .list {
     flex-flow: row wrap;
     align-items: stretch;
+  }
+}
+
+@media (min-width: 50rem) {
+  .card__list_md {
     justify-content: center;
   }
 }
 @media (min-width: 69rem) {
-  .content__list {
+  .card__list_md {
     gap: var(--space-4);
   }
-}
-.content__item {
-  width: 68.06%;
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-4);
 }
 
 .footer {
@@ -967,6 +964,12 @@ a:where(:active, :visited, :link) {
   border-radius: var(--space-3);
   box-shadow: 0px 2px 10px 0 var(--clr-shadow);
 }
+.card__social-media {
+  width: 68.06%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4);
+}
 .card_sm {
   width: 68.66%;
   display: flex;
@@ -977,7 +980,7 @@ a:where(:active, :visited, :link) {
   gap: var(--space-5);
 }
 .card_md {
-  width: min(77.61%, 25rem);
+  width: min(77.61%, 24rem);
   display: flex;
   flex-direction: column;
   background-color: #fff;
@@ -988,7 +991,6 @@ a:where(:active, :visited, :link) {
 }
 @media (min-width: 69rem) {
   .card_md {
-    max-width: 16.25rem;
     width: min(20vw, 16.25rem);
   }
 }
